unpackaged/main/default/objects/Site_Metadata__c/Site_Metadata__c.object-meta.xml
<CustomObject>
    <description>Stores prompt specific information like Inverters, Transformers, Turbines, etc… and its core attributes values</description>
    <label>Site Metadata</label>
    <nameField>
        <label>Site Metadata Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Site Metadata</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>