unpackaged/main/default/objects/Site_Metadata__c/fields/Account_Plant__c.field-meta.xml
<CustomField>
    <fullName>Account_Plant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Plant</label>
    <referenceTo>Account_Plant__c</referenceTo>
    <relationshipLabel>Site Metadata</relationshipLabel>
    <relationshipName>Site_Metadata</relationshipName>
    <type>Lookup</type>
</CustomField>