unpackaged/main/default/objects/Site_Metadata__c/fields/Alternate_Parent_Site_Metadata__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Parent_Site_Metadata__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Alternate Parent Site Metadata</label>
    <referenceTo>Site_Metadata__c</referenceTo>
    <relationshipLabel>Site Metadata (Alternate Parent Site Metadata)</relationshipLabel>
    <relationshipName>Alternate_Parent_Site_Metadata</relationshipName>
    <type>Lookup</type>
</CustomField>