unpackaged/main/default/objects/Site_Metadata__c/fields/Attribute_Info__c.field-meta.xml
<CustomField>
    <fullName>Attribute_Info__c</fullName>
    <label>Attribute Info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>