unpackaged/main/default/objects/Site_Metadata__c/fields/Base_Asset_Template__c.field-meta.xml
<CustomField>
    <fullName>Base_Asset_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Base Asset Template</label>
    <referenceTo>Base_Asset_Template__c</referenceTo>
    <relationshipLabel>Site Metadata</relationshipLabel>
    <relationshipName>Site_Metadata</relationshipName>
    <type>Lookup</type>
</CustomField>