unpackaged/main/default/objects/Site_Metadata__c/fields/Children_to_be_Deleted__c.field-meta.xml
<CustomField>
    <fullName>Children_to_be_Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Children to be Deleted</label>
    <type>Checkbox</type>
</CustomField>