unpackaged/main/default/objects/Site_Metadata__c/fields/Is_Attribute_Value_Modified_in_Prompt__c.field-meta.xml
<CustomField>
    <fullName>Is_Attribute_Value_Modified_in_Prompt__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will get updated only if there is any change in the Prompt</description>
    <inlineHelpText>This field will get updated only if there is any change in the Prompt</inlineHelpText>
    <label>Is Attribute Value Modified in Prompt</label>
    <type>Checkbox</type>
</CustomField>