unpackaged/main/default/objects/Site_Metadata__c/fields/Is_Deleted__c.field-meta.xml
<CustomField>
    <fullName>Is_Deleted__c</fullName>
    <formula>Plant_Asset_Prompt_Detail__r.Is_Deleted__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Deleted</label>
    <type>Checkbox</type>
</CustomField>