unpackaged/main/default/objects/Site_Metadata__c/fields/Parent_Asset_Short_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Asset_Short_Name__c</fullName>
    <label>Parent Asset Short Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>