unpackaged/main/default/objects/Site_Metadata__c/fields/Parent_Site_Metadata__c.field-meta.xml
<CustomField>
    <fullName>Parent_Site_Metadata__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Site Metadata</label>
    <referenceTo>Site_Metadata__c</referenceTo>
    <relationshipLabel>Site Metadata (Parent Site Metadata)</relationshipLabel>
    <relationshipName>Site_Metadata</relationshipName>
    <type>Lookup</type>
</CustomField>