unpackaged/main/default/objects/Site_Metadata__c/fields/Plant_Asset_Prompt_Detail__c.field-meta.xml
<CustomField>
    <fullName>Plant_Asset_Prompt_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plant Asset Prompt Detail</label>
    <referenceTo>Plant_Asset_Prompt_Detail__c</referenceTo>
    <relationshipLabel>Site Metadata</relationshipLabel>
    <relationshipName>Site_Metadata</relationshipName>
    <type>Lookup</type>
</CustomField>