unpackaged/main/default/objects/Site_Metadata__c/fields/Previous_Prompt_Id__c.field-meta.xml
<CustomField>
    <fullName>Previous_Prompt_Id__c</fullName>
    <label>Previous Prompt Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>