unpackaged/main/default/objects/Site_Metadata__c/fields/Previous_Prompt_Name__c.field-meta.xml
<CustomField>
    <fullName>Previous_Prompt_Name__c</fullName>
    <label>Previous Prompt Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>