unpackaged/main/default/objects/Site_Metadata__c/fields/Previous_Prompt_Record__c.field-meta.xml
<CustomField>
    <fullName>Previous_Prompt_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Prompt Record</label>
    <referenceTo>Site_Metadata__c</referenceTo>
    <relationshipLabel>Previous Prompt Record</relationshipLabel>
    <relationshipName>Previous_Prompt_Record</relationshipName>
    <type>Lookup</type>
</CustomField>