unpackaged/main/default/objects/Site_Metadata__c/fields/Prompt_Information__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prompt Information</label>
    <referenceTo>Prompt_Information__c</referenceTo>
    <relationshipLabel>Site Metadata</relationshipLabel>
    <relationshipName>Site_Metadata</relationshipName>
    <type>Lookup</type>
</CustomField>