unpackaged/main/default/objects/Site_Metadata__c/fields/Prompt_Specific_Info__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Specific_Info__c</fullName>
    <label>Prompt Specific Info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>