unpackaged/main/default/objects/Site_Metadata__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_Plant__c</columns>
    <columns>Asset_Name__c</columns>
    <columns>Prompt_Information__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>